# winforms

./: .CodeQL.yml  .claudiaideconfig  .editorconfig  .gitattributes  .gitconfig  .gitignore  .vsts-ci.yml  AnalyzerTests-Copilot-Instructions.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CodeMaid.config  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Documentation.md  DvlErrLog.txt  GDIPlus-copilot-instructions.md  HelloWorld.sln  NuGet.Config  NuGet.config  PULL_REQUEST_TEMPLATE.md  README.md  Restore.cmd  System.Windows.Forms.sln  TABCONTROL_DARKMODE_TESTING.md  THIRD-PARTY-NOTICES.TXT  Test.targets  WinForms.vsconfig  WindowsFormsApp2.sln  Winforms.sln  WinformsLegacy.sln  azure-pipelines-PR.yml  azure-pipelines-richnav.yml  azure-pipelines.yml  build-local.ps1  build.cmd  codecov.yml  deleteMe.txt  es-metadata.yml  (+6 more)
.config/1espt/: PipelineAutobaseliningConfig.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  fabricbot.json
.github/Copilot/: GDIPlus-copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  bug_report_designer.yml  config.yml  feature_request.md  feature_request.yml  internal-tracking-issue.md  localization-issue-report.md  localization-issue-report.yml  localization_request.md  test_issue.yaml
.github/policies/: resourceManagement.yml
.github/workflows/: backport.yml  block-PR-with-no-merge-label.yml  build-test.yml  create-release.yml  fix-nuget-config-release-pr.yml  labeler-cache-retention.yml  labeler-predict-pulls.yml  labeler-train.yml  labeler.md  main.yml  spelling.yml
Documentation/: MigrationPlan.md  building-guidelines.md  building.md  contributing-guide.md  contributing.md  debugging.md  developer-guide.md  dogfooding.md  functional-testing.md  getting-started.md  intellisense.md  issue-guide.md  machine-setup.md  porting-guidelines.md  quick-start.md  roadmap.md  testing-guidelines.md  testing-in-vs.md  testing.md  unit-testing.md  winforms-designer.md
Documentation/designer-releases/: readme.md
Localize/: LocProject.json
docs/: Accessibility Workaround.md  AnchorLayoutChangesInNet80.md  WinformsRuntimeConfiguration.md  building.md  coding-style.md  dataobject-serialization.md  debugging.md  designer-accessibility.md  developer-guide.md  getting-started.md  intellisense.md  issue-guide.md  list-of-diagnostics.md  porting-guidelines.md  release-activity.md  roadmap.md  runtime-configuration.md  shared-wpf-infrastructure.md  testing-in-vs.md  testing.md  winforms-designer.md
docs/accessibility/: accessible-role-controltype.md  listview-expected-behavior.md  monthcalendar-expected-behavior.md
docs/analyzers/: AppManifestAnalyzer.Help.md  ApplicationConfigurationGenerator.Help.md  Experimental.Help.md  WinFormsCSharpAnalyzers.Help.md  WinFormsVisualBasicAnalyzers.Help.md  akams.md  akams.txt
docs/design/: anchor-layout-changes-in-net80.md
docs/designer/: designer-high-dpi-mode.md  designer-selection.md  modernization-code-behind-generation-OOP-designer.md  (+3 more)
eng/: .editorconfig  Analyzer.props  Analyzer.targets  Build.props  CIBuild.cmd  CodeAnalysis.src.globalconfig  CodeAnalysis.test.globalconfig  CodeCoverage.proj  CodeStyle.props  CodeStyle.targets  DefaultGenApiDocIds.txt  DotNetBuild.props  FacadeAssemblies.props  MemDump.win.psm1  MergeCoverageData.ps1  MultiSearch.ps1  NonShipping.ruleset  PublishHash.cmd  PublishHash.ps1  Publishing.props  ReferenceAssemblies.props  ResolveMatchingContract.targets  Resources.targets  Screenshots.win.psm1  SendToHelix.proj  Shipping.ruleset  SourceBuild.props  Test.props  Test.targets  Tools.props  Version.Details.props  Version.Details.xml  Versions.props  build.ps1  build.yml  buildvars.ps1  ci-helix-test.yml  ci.yml  configure-toolset.ps1  custom-cibuild.ps1  (+14 more)
pkg/: Microsoft.Private.Winforms.csproj  Microsoft.Private.Winforms.pkgproj
src/System.Windows.Forms/tests/InteropTests/NativeTests/: AccessibleObjectTests.cpp  AxTestControl.cpp  AxTestControl.h  CMakeLists.txt  Contract.idl  DispatchImpl.h  DllGetClassObject.cpp  Exports.def  NativeTests.X.manifest  NativeTests.proj  RawErrorInfoUsageTest.cpp  RichTextBoxTests.cpp  StandardErrorInfoUsageTest.h  WebBrowserSiteBaseInteropTests.cpp  testhelpers.h
src/System.Windows.Forms/tests/UnitTests/WindowsFormsTests/: App.manifest  CMakeLists.txt  Contract.idl  DispatchImpl.cpp  DispatchImpl.h  IErrorInfoObject.cpp  README.md  RawErrorInfoUsageTest.cpp  RawErrorInfoUsageTest.h  StandardErrorInfoUsageTest.cpp  StandardErrorInfoUsageTest.h  System_Windows_Forms_NativeTests.X.manifest  WindowsFormsTests.proj
(+13349 files in other folders)
